# meshbench

./: .gitignore  README.md  pyproject.toml
benchmarks/: aggregate.py  charts.py  corpus.py  failmodes.py  report.py  run.py
benchmarks/tests/: test_benchmark.py
src/meshbench/: __init__.py  _cell.py  _edges.py  _intersections.py  _numba_kernels.py  density.py  fingerprint.py  loading.py  manifold.py  normals.py  scoring.py  topology.py  types.py
tests/: conftest.py  test_cell.py  test_export.py  test_fingerprint.py  test_manifold.py  test_scoring.py  test_topology.py
tests/meshbench/: test_cell.py  test_curvature.py  test_defects.py  test_density.py  test_features.py  test_intersections.py  test_loading.py  test_normals.py  test_serialization.py  test_topology.py
tests/meshfix/: test_decimate.py  test_hole_fill.py  test_intersection_ops.py  test_manifold_ops.py  test_normal_ops.py  test_numpy_ops.py  test_pipeline.py  test_remesh.py  test_types.py
tests/meshview/: test_compare_export.py  test_export.py
