[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshbench"
version = "0.1.0"
description = "Geometric mesh quality analysis library"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "trimesh>=4.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/meshbench"]
